{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 15,
  "lineage": "937259df-ba38-8105-302e-03194d67e0bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsvpc_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:862066027316:instance/i-0d1a16612f6a1a117",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1a16612f6a1a117",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "corp_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e80de71afd4a681f",
            "private_dns": "ip-162-0-1-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "162.0.1.60",
            "public_dns": "ec2-54-167-79-210.compute-1.amazonaws.com",
            "public_ip": "54.167.79.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024986b5efaef7af4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01790214e29accbe2",
            "tags": {
              "Name": "prod-instance"
            },
            "tags_all": {
              "Name": "prod-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011c328fefde26a35"
            ]
          },
          "dependencies": [
            "aws_subnet.session1",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "session_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:internet-gateway/igw-0bd450fa9e904ec51",
            "id": "igw-0bd450fa9e904ec51",
            "owner_id": "862066027316",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "session-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:route-table/rtb-06de9779472b9238d",
            "id": "rtb-06de9779472b9238d",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd450fa9e904ec51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-pub-rt"
            },
            "tags_all": {
              "Name": "prod-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "session-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:route-table/rtb-0f67b20a417ce792b",
            "id": "rtb-0f67b20a417ce792b",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-pri-rt"
            },
            "tags_all": {
              "Name": "prod-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ad9eaaec1dcc77e",
            "route_table_id": "rtb-06de9779472b9238d",
            "subnet_id": "subnet-01790214e29accbe2"
          },
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_route_table.session-rt1",
            "aws_subnet.session1",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1da1b2decd6b9e4",
            "route_table_id": "rtb-06de9779472b9238d",
            "subnet_id": "subnet-00ebde27ebbc34e98"
          },
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_route_table.session-rt1",
            "aws_subnet.session2",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085580e66f7cafd8b",
            "route_table_id": "rtb-0f67b20a417ce792b",
            "subnet_id": "subnet-023fd25328321ca7d"
          },
          "dependencies": [
            "aws_route_table.session-rt2",
            "aws_subnet.session3",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085580e66f7cafd8b",
            "route_table_id": "rtb-0f67b20a417ce792b",
            "subnet_id": "subnet-023fd25328321ca7d"
          },
          "dependencies": [
            "aws_route_table.session-rt2",
            "aws_subnet.session3",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:security-group/sg-026a6d26de224b8e2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-026a6d26de224b8e2",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "862066027316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-sg"
            },
            "tags_all": {
              "Name": "pub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-01790214e29accbe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "162.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01790214e29accbe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-pub-subnet1"
            },
            "tags_all": {
              "Name": "prod-pub-subnet1"
            },
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-00ebde27ebbc34e98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "162.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ebde27ebbc34e98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-pub-subnet2"
            },
            "tags_all": {
              "Name": "prod-pub-subnet2"
            },
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-023fd25328321ca7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "162.0.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023fd25328321ca7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-pri-subnet1"
            },
            "tags_all": {
              "Name": "prod-pri-subnet1"
            },
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-0b228a37310edac62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "162.0.4.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b228a37310edac62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-pri-subnet2"
            },
            "tags_all": {
              "Name": "prod-pri-subnet2"
            },
            "vpc_id": "vpc-001290c8b8e823e47"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "session",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:vpc/vpc-001290c8b8e823e47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "162.0.0.0/16",
            "default_network_acl_id": "acl-0de9ad8a3afabb443",
            "default_route_table_id": "rtb-0e10314f9d4e93c66",
            "default_security_group_id": "sg-011c328fefde26a35",
            "dhcp_options_id": "dopt-04a1e7bf9456ee3aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001290c8b8e823e47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e10314f9d4e93c66",
            "owner_id": "862066027316",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}